# loomed

./: .gitignore  Cargo.toml  README.md
crates/loomed-cli/: Cargo.toml
crates/loomed-cli/src/: main.rs
crates/loomed-cli/src/commands/: add.rs  commit.rs  init.rs  log.rs  mod.rs  prompts.rs  show.rs  status.rs  verify.rs
crates/loomed-core/: Cargo.toml
crates/loomed-core/src/: builder.rs  commit.rs  error.rs  lib.rs  participant.rs  payload.rs  verify.rs
crates/loomed-crypto/: Cargo.toml
crates/loomed-crypto/src/: encrypt.rs  error.rs  hash.rs  keys.rs  lib.rs
crates/loomed-store/: Cargo.toml
crates/loomed-store/src/: error.rs  lib.rs  stage.rs  vault.rs
