[package]
name = "loomed-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
loomed-crypto = { path = "../loomed-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }