[package]
name = "loomed-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
loomed-core = { path = "../loomed-core" }
loomed-crypto = { path = "../loomed-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }